kubernetes/meshcentral/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: meshcentral

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: meshcentral
      app.kubernetes.io/instance: meshcentral
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meshcentral
        app.kubernetes.io/instance: meshcentral
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
      containers:
      - name: meshcentral
        image: typhonragewind/meshcentral:1.1.53@sha256:9ea262ff902fa18fcca8688af4c7fe62988254f5cf08f273193bec6b4cf626be
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data
          mountPath: /opt/meshcentral/meshcentral-data
        - name: files
          mountPath: /opt/meshcentral/meshcentral-files
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: meshcentral-data
      - name: files
        persistentVolumeClaim:
          claimName: meshcentral-files
