kubernetes/meshcentral/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: meshcentral
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Mesh Central
    gethomepage.dev/description: AMT/vPro management
    gethomepage.dev/group: AMT Management
    gethomepage.dev/icon: meshcentral.png

spec:
  tls:
  - hosts:
    - meshcentral.k.oneill.net
    secretName: meshcentral-tls
  rules:
  - host: meshcentral.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meshcentral
            port:
              number: 80
